# devex

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/skills/cicd/: SKILL.md
.claude/skills/cicd/scripts/: workflow.sh
.claude/skills/communicate/: SKILL.md
.claude/skills/doc-test-alignment/: SKILL.md
.claude/skills/outsource/prompts/: explore.md  review.md  write.md
.claude/skills/pypi-maintainer/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/sonarclaude/: SKILL.md
.claude/skills/sonarclaude/scripts/: sonar.sh
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/scripts/: bump.py
.devague/: current  current_plan
.devague/frames/: devex-now-turns-a-push-into-continuous-pr-manageme.json  every-devex-command-now-closes-with-a-deterministi.json
.devague/plans/: devex-now-turns-a-push-into-continuous-pr-manageme.json  every-devex-command-now-closes-with-a-deterministi.json
.github/workflows/: publish.yml  test.yml
docs/: skill-sources.md
docs/plans/: 2026-05-29-devex-now-turns-a-push-into-continuous-pr-manageme.md  2026-05-29-every-devex-command-now-closes-with-a-deterministi.md
docs/specs/: 2026-05-29-devex-now-turns-a-push-into-continuous-pr-manageme.md  2026-05-29-every-devex-command-now-closes-with-a-deterministi.md
docs/superpowers/specs/: 2026-05-10-agex-pr-design.md
src/agent_experience/: __init__.py  cli.py
src/agent_experience/commands/doctor/assets/: report.md.j2
src/agent_experience/commands/pr/: SKILL.md
src/agent_experience/core/: backend.py  capabilities.py  github.py  hook_io.py  prog.py  render.py
src/devex/: __init__.py  __main__.py  cli.py
src/devex/backends/acp/: probe.py
src/devex/backends/capabilities/: acp.yaml  claude-code.yaml  codex.yaml  copilot.yaml
src/devex/backends/claude_code/: probe.py
src/devex/backends/codex/: probe.py
src/devex/backends/copilot/: probe.py
src/devex/commands/doctor/: SKILL.md
src/devex/commands/explain/: SKILL.md
src/devex/commands/gamify/: SKILL.md
src/devex/commands/hook/: SKILL.md
src/devex/commands/learn/: SKILL.md
src/devex/commands/overview/: SKILL.md
src/devex/commands/pr/: SKILL.md
src/devex/commands/push/: SKILL.md
src/devex/core/: _jsonl.py  backend.py  capabilities.py  config.py  footer.py  github.py  hook_io.py  journal.py  paths.py  prog.py  render.py  skill_loader.py
tester-agents/claude/: CLAUDE.md  README.md  culture.yaml
tests/: test_cli_dispatch.py  test_cli_errors.py  test_cli_smoke.py  test_footer_guarantee.py  test_footer_hints.py  test_skill_md_consistency.py
tests/backends/: test_claude_code_probe.py  test_stub_probes.py
tests/commands/: test_doctor.py  test_explain.py  test_gamify.py  test_hook.py  test_learn.py  test_overview.py  test_prog_propagation.py
tests/commands/pr/: test_await.py  test_await_detach.py  test_delta.py  test_deploy.py  test_footer.py  test_lint.py  test_lint_rules.py  test_open.py  test_qodo.py  test_read.py  test_readiness.py  test_reply.py  test_review.py
tests/commands/push/: test_push.py  test_push_backends.py
tests/core/: test_backend.py  test_capabilities.py  test_config.py  test_footer.py  test_github.py  test_hook_io.py  test_journal.py  test_paths.py  test_prog.py  test_render.py  test_resolve_backend.py  test_skill_loader.py  test_version_lookup.py
(+98 files in other folders)
