[project]
name = "agex-cli"
version = "0.22.0"
description = "Agent-operated developer-experience CLI — deterministic per-backend markdown briefings for autonomous agents."
authors = [{name = "Ori Nachum"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tomlkit>=0.12",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "bandit>=1.7",
]

[project.scripts]
agex = "agent_experience.cli:_main_entrypoint"

[project.urls]
Homepage = "https://culture.dev/agex/"
Repository = "https://github.com/agentculture/agex-cli"
Issues = "https://github.com/agentculture/agex-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_experience"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -v"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.bandit]
# B311 flags any `random.*` usage as potentially unsafe for crypto purposes.
# `core/hook_io._acquire_lock_with_retry` uses `random.uniform` purely for
# backoff jitter between bounded retries -- not a security context, so the
# standard `random` module is the right choice (secrets would be misuse).
skips = ["B311"]
