[project]
name = "devex-cli"
version = "0.28.0"
description = "Agent-operated developer-experience CLI — deterministic per-backend markdown briefings for autonomous agents."
authors = [{name = "Ori Nachum"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tomlkit>=0.12",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "bandit>=1.7",
]

[project.scripts]
devex = "devex.cli:_main_entrypoint"
agex = "devex.cli:_main_entrypoint"

[project.urls]
Homepage = "https://culture.dev/devex/"
Repository = "https://github.com/agentculture/devex"
Issues = "https://github.com/agentculture/devex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -v"

[tool.coverage.run]
source = ["src/devex"]
# Emit repo-relative paths in coverage.xml so SonarCloud maps them to
# sonar.sources=src (absolute / .venv paths fail to map → empty coverage).
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.bandit]
# B311 flags any `random.*` usage as potentially unsafe for crypto purposes.
# `core/_jsonl.acquire_lock_with_retry` uses `random.uniform` purely for
# backoff jitter between bounded retries -- not a security context, so the
# standard `random` module is the right choice (secrets would be misuse).
skips = ["B311"]
